tests/negative/test_mac_macro_asgn.orb
mac foo () {};

mac bar () {};

fnc main () () {
    eval (= foo bar);
};